# ChangeLog for dev-lang/niecza-bin
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/niecza-bin/ChangeLog,v 1.4 2014/08/10 20:47:18 slyfox Exp $

  10 Aug 2014; Sergei Trofimovich <slyfox@gentoo.org> niecza-bin-20.ebuild,
  niecza-bin-21.ebuild, niecza-bin-22.ebuild, niecza-bin-24.ebuild:
  QA: Move download URL to mirror://github/.

*niecza-bin-24 (05 Dec 2012)

  05 Dec 2012; Patrick Lauer <patrick@gentoo.org> +niecza-bin-24.ebuild:
  Bump

*niecza-bin-21 (05 Oct 2012)
*niecza-bin-22 (05 Oct 2012)

  05 Oct 2012; Patrick Lauer <patrick@gentoo.org> +niecza-bin-21.ebuild,
  +niecza-bin-22.ebuild:
  Bump

*niecza-bin-20 (22 Aug 2012)

  22 Aug 2012; Patrick Lauer <patrick@gentoo.org> +metadata.xml,
  +niecza-bin-20.ebuild:
  Initial import, ebuilds by me