@@ -5,16 +5,16 @@ DIST niecza-20.zip 1878083 SHA256 2ca2542c563130c5d4b45d5bd251601472695457568fc6
 DIST niecza-21.zip 737733 SHA256 b4d01a79137134d25e22c8085212571cdadcd7ea519bede42f161acd1d1dfdba SHA512 34c29fb8d427c5dc98ead5acd1e49becf5b67a4c34478b431975d975047c9601a5a7192d400088ff36cd907543bc0e32457000cfd565078d8c4c48c810d23c53 WHIRLPOOL 1b319fa101b93778b25e1d60a44462f026def9a0f3d0f7572c24abb6075e90da179c310f61e6d6c52a37bc13e201a79a11a99e65dae8b225e063cd75acde7251
 DIST niecza-22.zip 1909281 SHA256 b4220bf2d12505ea576405e84b2402a9532af3e6e953d5f3f0b576f21114e6b0 SHA512 decfa04d7614f3d335e8991a0938821fe0ca26f2892a2d6d9d498ab8c84c11f2b6b620101633c7b27faf65e100775baefa23cb5c0072a34037803caa5dc4d800 WHIRLPOOL 67275813b182434853290d4abe2546c26691b67747b6be681fd9276310b720d36a86ab2a4f1ade23c5b3f551ca0e399c64242896e6bd7f332659f3821b1df302
 DIST niecza-24.zip 1577897 SHA256 182055b5c2c187e1bebb4dd3fe34c62ea39cdb67188b9548df6aa78864141af6 SHA512 f4fa5cf6aa98a102d193bbbcf14ab0079831a2344684fb9190bebd1ec25e93c0078a816a7ddb9bb17c3a017f2b34a1dcf32e9016cf26d7b1721ad94baeefafe7 WHIRLPOOL 635b415945ffd25f3b84af205f5edd428adb6776a8981954bd810400f364fb164d2f54bd076e0f379ef9f4d0a0b8b2d0350db47654084f639bf9f0fca2ee05f8
-EBUILD niecza-bin-20.ebuild 835 SHA256 e2e1aa4459c27b8bf074c261841173016d00253bb9f76d6b7fbd851448ce7efc SHA512 7d74beb5641a0f7b8f11b732e067d8608462e21249fd562ce0a5ef99798da2398768cb0c8fdda77dc5cd588ba7de2a55fee99a3b391a8ef0ed6423d32339395e WHIRLPOOL 09f214b5cbde0bc0eab6aa6afe2dd09491123ea5a5ce2fd8eafb6e9bea865f9bb2650faf973efead7a82ad0fbaccc39bf78e17403079b4c0003eb8020a5d4d21
-EBUILD niecza-bin-21.ebuild 835 SHA256 e45095c4b3bc270f1c8d015e2b570178d56af4ac91034f0085dd0bc73806442f SHA512 7ebafa9973da616992821dcaeba046d1adbbb6fcdd4ec6e7842bdc0533f74368d24c6de7f69f35598f6222bc9803afd78a12baa0afb1a3c3e8b3b4f9257b8981 WHIRLPOOL 4b4b55171bdfbdde85f3fe0a10b0dab58283645eb9f5e177a226393c4e02546019b17ca2d89bba5ace00bc61df80a182883d71f41f0514c3286784f932f16136
-EBUILD niecza-bin-22.ebuild 835 SHA256 c831996d6e1f2b5fec4919ca03036cda3089cca75223d2132d736a229e37c91c SHA512 6c6895775f9614c01903117d8e3098f3bc78fb425d7754e3e4e0f70fbeafbd0ebad8517f0e03d0ab0c69abe6a5b3bffd408eadc327b588e5d51f97b77e247270 WHIRLPOOL 84442c9294fa19a69256bf0910021cadc0a9cb0f9663a7bba1157e64cc7db1e7dfbbfd56a716cf4ccefe1d325bd707afbc84805cb70d5680aa849b4c4ea418a2
-EBUILD niecza-bin-24.ebuild 835 SHA256 f5c5e97af4eb9f58141eeb2d6504e08a7d247d4328869499d75c9dd968b9de61 SHA512 07f1bfb035e8b8f764fc5a2a2d503ef5fdd15b142e6cb93cd3650f5f2b6e5498d28c1a033fd0ce14de13b3d34d13801ab542624a74351dd38ac079a746448380 WHIRLPOOL 2fc170b3b873eda163975d8b4b876f3de2ee0c2d4bf7379e582e8c0ccb8972db24e6cffdc93bc58ab04276e7a463186df2b337d7d261657942c1b02e783bdf8c
-MISC ChangeLog 829 SHA256 3c325874b6875412aaf48e76317870097ad7189a5a6cef0271f9d2c316a83dfa SHA512 cc658a64c9c789ba2fdeb6bc18c6c9eba7c11fa576cebef5bc993fea60648ae575cc4db3dab50239ee28e0f80a9c2c13a2224a8363335aba6cb6ffb6c4ba6b41 WHIRLPOOL 60226a513ed25d4b4510f334168b405b73bbc735ffd605fd5b2e9c7182be223191f6c3b972dbf7d0a6524d65aaed138df44dc2552bff704f44b97093358b6a76
+EBUILD niecza-bin-20.ebuild 834 SHA256 6f8e2d8b597943eb375324236fca7fdf2791be890521b8c373e0047f510727c2 SHA512 5ab08f6b44a9787054dc4e5d879874ccce5ef1d4d98a08dfd0af261455ecf74ab7cde1c4814289d1a7305f44b93383d200a8f888a3dd41f0054a2adf32468b01 WHIRLPOOL daea251afec91bacef7ee245dbac68fc58f6f0f3b6bfab0c8509b21d599c865d7791483f2e022547316977a5481a128d331c89f549688b9b31e5ddeeeba67a89
+EBUILD niecza-bin-21.ebuild 834 SHA256 c1dae3578be0ad5cc0294c6238623cf26a08f6e7c9181dd6ec536d4ab2e03855 SHA512 926b2083556cfc90a96dbdf18b3abfc343bf8833cf5c6485af69b8ad2c4c5ef388c989dc80d1aab02ca1d7697acffa17f361211ac0602b7434000a6ffdf4514a WHIRLPOOL 51ba859b90eb32f7307b3bab577313e95d14e9af7f2f5dc07886b68a012b14ad85ecb59c4f887d1ef9c58ff0d7d56698b218a6ea181d52e3156e93873be48095
+EBUILD niecza-bin-22.ebuild 834 SHA256 da21df37e1fd3666b7b7eae103e55b69716225eaa9f85299592b8706ef81ada2 SHA512 606cd53da0a8ff70e5d8829da8b9a44227ae2b5b73e96108c5512baa428998c16f95669771a6a5941abdd1e5b8b12e13eaea1b468fce01265767e94cf7f62b02 WHIRLPOOL 85afd49a0c9c3d7c1f0961a6f22ab8a8236f41b1f165b36e16d957d0584700ee07d194b6512e5fffc8ec52a141dfadeca76da12d39d4d0dab2127809d06faa7a
+EBUILD niecza-bin-24.ebuild 834 SHA256 6bce79bcc7ed5caaa312142027504f9e28e6e6a1b86cdb68b33a18517a776fb1 SHA512 49d86613a8aea93e2f521ccec52c428bbfec29f3f6b70ca19571aa5d68a172ef9ccef8d401e6f9e53f0be4d51c871d82adbd4f28fd40f1053665a4e61660a811 WHIRLPOOL f5907b4e8784b8a28ea12875a029a7da627b83364edee6f0c24b955a29c556fde4455c5b33f1c5a02c766fb21a7dc499afab8662437e39174febf482fa2d051e
+MISC ChangeLog 1015 SHA256 534f3a8298959c13f90c2e703856d1f193ade32fa1ea2cac843d05f1168d32d6 SHA512 05159c587ea10ab750d78af67e00a7fe725a9cb2da05449e404e98c90b132d9365da51385aedbfe50cf6598d65fab6fa42e8f91fc37132ee4137b34751c6d8ec WHIRLPOOL 8f647926b185bdad3628c69346c963c70748fcc0534f2f6cccc196293a7c9eac589af0acbb05250b95af0da2c3d64a38da63241ce23eb8b221ee07bd4d65b268
 MISC metadata.xml 233 SHA256 65209e280ca6de32a92e1a57301ff69fb3472e55ba07848d6f80405d35e92d47 SHA512 0d30bfb39315a04767e07896409f5d3954f8e954e20fcbac7b92bb9a636c9f61c50b1b2cf55e6c1db9a199a0edc159b5c8cc8f541efb9c4adafa28e3652cff7b WHIRLPOOL 027c5101e1cbc665c9d2ef240f73a874c9f49a9b70175c5947e012df61de484585088a46b6ce9078816e548e6bcc326e7223539cc999159eee2757d0a2eb1480
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlPn2lcACgkQcaHudmEf86oe9gCeIy0ftuhcoUL3tAZr0a5/iKoS
-kGwAn0ekvxlIi8e+qGKOiq6D8k9woAnb
-=pJfv
+iEYEAREIAAYFAlPn2mUACgkQcaHudmEf86rgygCfYEq6B7Z1EoaOfHres2LZHxIw
+MBQAn1RTR2/SvL8MMatrwOb1kpzcauXu
+=uMzk
 -----END PGP SIGNATURE-----
