@@ -1,6 +1,10 @@
 # ChangeLog for dev-lang/niecza-bin
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/niecza-bin/ChangeLog,v 1.4 2014/08/10 20:47:18 slyfox Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/niecza-bin/ChangeLog,v 1.5 2014/08/10 20:47:32 slyfox Exp $
+
+  10 Aug 2014; Sergei Trofimovich <slyfox@gentoo.org> niecza-bin-20.ebuild,
+  niecza-bin-21.ebuild, niecza-bin-22.ebuild, niecza-bin-24.ebuild:
+  QA: drop trailing '.' from DESCRIPTION
 
   10 Aug 2014; Sergei Trofimovich <slyfox@gentoo.org> niecza-bin-20.ebuild,
   niecza-bin-21.ebuild, niecza-bin-22.ebuild, niecza-bin-24.ebuild:
